[REFACTOR] zzimCount 로직 전체 수정, 필터링 수정